# guntamatic

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  docker-build.sh
.devcontainer/: devcontainer.json
.gitpod/: Dockerfile
examples/grafana/: influxdb-dashboard.json
guntamatic-cli/: Cargo.toml
guntamatic-cli/src/: main.rs
guntamatic-cli/src/web/: get.rs  mod.rs
guntamatic-cli/src/web/stream/: mod.rs  sink_influxdb.rs
guntamatic-web/: Cargo.toml
guntamatic-web/src/: lib.rs  main.rs
guntamatic-web/src/lib/: api.rs  daq.rs  mod.rs
