[package]
name = "guntamatic-cli"
version = "0.1.0"
authors = ["geropl <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "guntamatic"
path = "src/main.rs"

[features]
default = ["sink_influxdb"]
sink_influxdb = ["influxdb-client"]
# sink_prometheus = ["prometheus", "warp"]


[dependencies]
guntamatic-web = { path = "../guntamatic-web" }

# Since 3.0.0 clap supports derive(clap) ootb
clap = "=3.0.0-beta.2"
# pin clap_derive as well so we don't run into version mismatches
clap_derive = "=3.0.0-beta.2"

# error handling
anyhow = "1.0.32"
thiserror = "1.0.13"

# logging
pretty_env_logger = "0.4.0"
log = "0.4.11"

# runtime + support
tokio = { version = "1.12.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
ctrlc = "3.1.6"
# async-net = "1.5.0"
flume = "0.8.4"

# # sink_prometheus
# prometheus = { version = "0.11.0", optional = true }
# warp = { version = "0.3.0", optional = true }

# sink_influxdb
influxdb-client = { version = "0.1.4", optional = true }

# misc
hex = "0.4.2"
pretty_assertions = "0.6.1"
lazy_static = "1.4.0"
regex = "1.5.4"
