[package]
name = "guntamatic-web"
version = "0.1.0"
authors = ["geropl <gero.posmyk@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "guntamatic"
path = "src/main.rs"

[lib]
name = "guntamatic_web"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.41"
http = "0.2.4"
http-types = "2.11.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = "0.8.4"
serde_repr = "0.1.7"
smol = "1.2.5"
surf = "2.2.0"
thiserror = "1.0.26"
